<resources>
    <string name="config_default_keyboard_theme_id">5</string>
    <string name="config_text_size_of_language_on_spacebar">small</string>
    <string name="spellchecker_likely_threshold_value">0.11</string>
    <string name="spellchecker_suggestion_threshold_value">0.03</string>
    <string name="more_keys_for_a" />
    <string name="more_keys_for_e">3</string>
    <string name="more_keys_for_i">8</string>
    <string name="more_keys_for_o">9</string>
    <string name="more_keys_for_u">7</string>
    <string name="more_keys_for_s" />
    <string name="more_keys_for_n" />
    <string name="more_keys_for_c" />
    <string name="more_keys_for_y">6</string>
    <string name="more_keys_for_q">1</string>
    <string name="more_keys_for_w">2</string>
    <string name="more_keys_for_d" />
    <string name="more_keys_for_r">4</string>
    <string name="more_keys_for_t">5</string>
    <string name="more_keys_for_z" />
    <string name="more_keys_for_k" />
    <string name="more_keys_for_l" />
    <string name="more_keys_for_g" />
    <string name="more_keys_for_p">0</string>
    <string name="more_keys_for_v" />
    <string name="keylabel_for_scandinavia_row2_10" />
    <string name="keylabel_for_scandinavia_row2_11" />
    <string name="more_keys_for_scandinavia_row2_10" />
    <string name="more_keys_for_scandinavia_row2_11" />
    <string name="more_keys_for_cyrillic_e" />
    <string name="more_keys_for_cyrillic_soft_sign" />
    <string name="more_keys_for_cyrillic_ha" />
    <string name="more_keys_for_currency_dollar">¢,£,€,¥,₱</string>
    <string name="more_keys_for_currency_euro">¢,£,$,¥,₱</string>
    <string name="more_keys_for_currency_pound">¢,$,€,¥,₱</string>
    <string name="more_keys_for_currency_general">¢,$,€,£,¥,₱</string>
    <string name="more_keys_for_smiley">":-)|:-) ,:-(|:-( ,;-)|;-) ,:-P|:-P ,=-O|=-O ,:-*|:-* ,:O|:O ,B-)|B-) ,:-$|:-$ ,:-!|:-! ,:-[|:-[ ,O:-)|O:-) ,:-\\\\\\\\|:-\\\\\\\\ ,:'(|:'( ,:-D|:-D "</string>
    <string name="more_keys_for_punctuation">"\\,,?,!,:,-,',\",(,),/,;,+,&amp;,@"</string>
    <string name="keyhintlabel_for_punctuation" />
    <string name="keylabel_for_popular_domain">.com</string>
    <string name="more_keys_for_popular_domain">.net,.org,.gov,.edu</string>
    <string name="keylabel_for_symbols_1">1</string>
    <string name="keylabel_for_symbols_2">2</string>
    <string name="keylabel_for_symbols_3">3</string>
    <string name="keylabel_for_symbols_4">4</string>
    <string name="keylabel_for_symbols_5">5</string>
    <string name="keylabel_for_symbols_6">6</string>
    <string name="keylabel_for_symbols_7">7</string>
    <string name="keylabel_for_symbols_8">8</string>
    <string name="keylabel_for_symbols_9">9</string>
    <string name="keylabel_for_symbols_0">0</string>
    <string name="more_keys_for_symbols_1">¹,½,⅓,¼,⅛</string>
    <string name="more_keys_for_symbols_2">²,⅔</string>
    <string name="more_keys_for_symbols_3">³,¾,⅜</string>
    <string name="more_keys_for_symbols_4">⁴</string>
    <string name="more_keys_for_symbols_5">⅝</string>
    <string name="more_keys_for_symbols_6" />
    <string name="more_keys_for_symbols_7">⅞</string>
    <string name="more_keys_for_symbols_8" />
    <string name="more_keys_for_symbols_9" />
    <string name="more_keys_for_symbols_0">ⁿ,∅</string>
    <string name="keylabel_for_comma">,</string>
    <string name="keylabel_for_f1">,</string>
    <string name="keylabel_for_symbols_question">\?</string>
    <string name="keylabel_for_symbols_semicolon">;</string>
    <string name="keylabel_for_symbols_percent">%</string>
    <string name="more_keys_for_comma" />
    <string name="more_keys_for_f1" />
    <string name="more_keys_for_f1_settings">\@icon/3|@integer/key_settings</string>
    <string name="more_keys_for_f1_navigate">\@icon/7|@integer/key_tab</string>
    <string name="more_keys_for_symbols_question">¿</string>
    <string name="more_keys_for_symbols_semicolon" />
    <string name="more_keys_for_symbols_percent">‰</string>
    <string name="keylabel_for_apostrophe">"'"</string>
    <string name="keylabel_for_dash">-</string>
    <string name="keyhintlabel_for_apostrophe">\"</string>
    <string name="keyhintlabel_for_dash">_</string>
    <string name="more_keys_for_apostrophe">\"</string>
    <string name="more_keys_for_dash">_</string>
    <string name="more_keys_for_bullet">♪,♥,♠,♦,♣</string>
    <string name="more_keys_for_star">†,‡,★</string>
    <string name="more_keys_for_plus">±</string>
    <string name="suggested_punctuations">"!?,:;\"()'-/@_"</string>
    <string name="magic_space_swapping_symbols">.,;:!?)]}\"</string>
    <string name="magic_space_stripping_symbols">"\u0009 
/_'-"</string>
    <string name="magic_space_promoting_symbols">([*&amp;@{&lt;>+=|</string>
    <string name="symbols_excluded_from_word_separators">"'-"</string>
    <string name="layout_switch_back_symbols" />
    <string name="label_to_more_symbol_key">= \\ &lt;</string>
    <string name="label_to_more_symbol_for_tablet_key">~ \\ {</string>
    <string name="label_tab_key">Tab</string>
    <string name="label_to_phone_numeric_key">123</string>
    <string name="label_to_phone_symbols_key">＊＃</string>
    <string name="prefs_suggestion_visibility_show_value">0</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_value">1</string>
    <string name="prefs_suggestion_visibility_hide_value">2</string>
    <string name="prefs_suggestion_visibility_default_value">0</string>
    <string name="auto_correction_threshold_mode_index_off">0</string>
    <string name="auto_correction_threshold_mode_index_modest">1</string>
    <string name="auto_correction_threshold_mode_index_aggeressive">2</string>
    <string name="auto_correction_threshold_mode_index_very_aggeressive">3</string>
    <string name="voice_mode_main">0</string>
    <string name="voice_mode_symbols">1</string>
    <string name="voice_mode_off">2</string>
    <string name="english_ime_debug_settings">Android keyboard Debug settings</string>
    <string name="prefs_debug_mode">Debug Mode</string>
    <string name="layout_basic">Basic</string>
    <string name="layout_high_contrast">Basic (High Contrast)</string>
    <string name="layout_stone_bold">Stone (bold)</string>
    <string name="layout_stone_normal">Stone (normal)</string>
    <string name="layout_gingerbread">Gingerbread</string>
    <string name="layout_ics">IceCreamSandwich</string>
    <string name="layout_qwerty">Default</string>
    <string name="layout_azerty">AZERTY</string>
    <string name="layout_qwertz">QWERTZ</string>
    <string name="layout_dvorak">Dvorak</string>
    <string name="layout_colemak">Colemak</string>
    <string name="subtype_generic">%s</string>
    <string name="dictionary_pack_package_name">com.google.android.inputmethod.latin.dictionarypack</string>
    <string name="dictionary_pack_settings_activity">com.google.android.inputmethod.latin.dictionarypack.DictionarySettingsActivity</string>
    <string name="settings_ms">ms</string>
    <string name="english_ime_name">Ice Cream Sandwich keyboard free</string>
    <string name="english_ime_settings">Ice Cream Sandwich keyboard settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="spell_checker_service_name">Android correction</string>
    <string name="android_spell_checker_settings">Spell checking settings</string>
    <string name="use_proximity_option_title">Use proximity data</string>
    <string name="use_proximity_option_summary">Use a keyboard-like proximity algorithm for spell checking</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="general_category">General</string>
    <string name="correction_category">Text correction</string>
    <string name="misc_category">Other options</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="advanced_settings_summary">Options for expert users</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="enable_span_insert">Enable recorrections</string>
    <string name="enable_span_insert_summary">Set suggestions for recorrections</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_suggestion_visibility_show_name">Always show</string>
    <string name="prefs_suggestion_visibility_show_only_portrait_name">Show on portrait mode</string>
    <string name="prefs_suggestion_visibility_hide_name">Always hide</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string name="auto_correction">Auto correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggeressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggeressive">Very aggressive</string>
    <string name="bigram_suggestion">Bigram suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string name="bigram_prediction">Bigram prediction</string>
    <string name="voice_input">Voice input key</string>
    <string name="language_selection_title">Input languages</string>
    <string name="prefs_usability_study_mode">Usability study mode</string>
    <string name="prefs_vibration_duration_settings">Vibration duration settings</string>
    <string name="full_version">Download Donation version</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="donation_category">Donation version options</string>
    <string name="user_dictionary_summary">Manage user dictionary words</string>
    <string name="user_dictionary_title">User dictionary</string>
    <string name="pref_select_background_title">Select background image</string>
    <string name="pref_select_background_summary">Select image for keyboard background</string>
    <string name="use_custom_image">Use background image</string>
    <string name="use_custom_image_summary">If checked background image will be used.</string>
    <string name="keyboard_height_portrait">Keyboard Height Portrait</string>
    <string name="skins_title">Keyboard Themes</string>
    <string name="auto_space">Space after punctuation</string>
    <string name="auto_space_summary">Insert space after punctuation</string>
    <string name="always_suggest">Always suggest</string>
    <string name="always_suggest_summary">Display suggestion in all apps</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_left">Swipe left</string>
    <string name="swipe_up">Swipe up</string>
    <string name="swipe_down">Swipe down</string>
    <string name="gestures_menu">Gestures</string>
    <string name="international_layouts">International layouts</string>
</resources>