<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:latin="http://schemas.android.com/apk/res/inputmethod.latin.ported">
    <include latin:keyboardLayout="@xml/kbd_key_styles" />
    <include latin:keyboardLayout="@xml/kbd_currency_key_styles" />
    <Row latin:keyWidth="10.000002%p">
        <Key latin:moreKeys="@string/more_keys_for_symbols_1" latin:keyLabel="@string/keylabel_for_symbols_1" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_2" latin:keyLabel="@string/keylabel_for_symbols_2" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_3" latin:keyLabel="@string/keylabel_for_symbols_3" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_4" latin:keyLabel="@string/keylabel_for_symbols_4" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_5" latin:keyLabel="@string/keylabel_for_symbols_5" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_6" latin:keyLabel="@string/keylabel_for_symbols_6" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_7" latin:keyLabel="@string/keylabel_for_symbols_7" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_8" latin:keyLabel="@string/keylabel_for_symbols_8" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_9" latin:keyLabel="@string/keylabel_for_symbols_9" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_0" latin:keyLabel="@string/keylabel_for_symbols_0" latin:keyWidth="fillRight" />
    </Row>
    <Row latin:keyWidth="10.000002%p">
        <Key latin:keyLabel="\@" />
        <Key latin:keyLabel="\#" />
        <Key latin:keyStyle="currencyKeyStyle" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_percent" latin:keyLabel="@string/keylabel_for_symbols_percent" />
        <Key latin:keyLabel="&amp;" />
        <Key latin:moreKeys="@string/more_keys_for_star" latin:keyLabel="*" />
        <Key latin:moreKeys="_,–,—" latin:keyLabel="-" />
        <Key latin:moreKeys="@string/more_keys_for_plus" latin:keyLabel="+" />
        <Key latin:moreKeys="[,{,&lt;" latin:keyLabel="(" />
        <Key latin:moreKeys="],},>" latin:keyLabel=")" latin:keyWidth="fillRight" />
    </Row>
    <Row latin:keyWidth="10.000002%p">
        <Key latin:keyStyle="toMoreSymbolKeyStyle" latin:visualInsetsRight="0.99999905%p" latin:keyWidth="14.999998%p" />
        <Key latin:moreKeys="¡" latin:keyLabel="!" />
        <Key latin:moreKeys="“,”,«,»" latin:maxMoreKeysColumn="6" latin:keyLabel="&quot;" />
        <Key latin:moreKeys="‘,’,‚,‛" latin:keyLabel="'" />
        <Key latin:keyLabel=":" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_semicolon" latin:keyLabel="@string/keylabel_for_symbols_semicolon" />
        <Key latin:keyLabel="/" />
        <Key latin:moreKeys="@string/more_keys_for_symbols_question" latin:keyLabel="@string/keylabel_for_symbols_question" />
        <Key latin:keyStyle="deleteKeyStyle" latin:visualInsetsLeft="0.99999905%p" latin:keyWidth="fillRight" />
    </Row>
    <include latin:keyboardLayout="@xml/kbd_symbols_row4" />
</merge>
