<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:latin="http://schemas.android.com/apk/res/inputmethod.latin.ported">
    <Row latin:keyWidth="10.000002%p">
        <Key latin:moreKeys="@string/more_keys_for_q" latin:keyLabel="q" latin:keyHintLabel="1" />
        <Key latin:moreKeys="@string/more_keys_for_w" latin:keyLabel="w" latin:keyHintLabel="2" />
        <Key latin:moreKeys="@string/more_keys_for_e" latin:keyLabel="e" latin:keyHintLabel="3" />
        <Key latin:moreKeys="@string/more_keys_for_r" latin:keyLabel="r" latin:keyHintLabel="4" />
        <Key latin:moreKeys="@string/more_keys_for_t" latin:keyLabel="t" latin:keyHintLabel="5" />
        <Key latin:moreKeys="@string/more_keys_for_y" latin:keyLabel="y" latin:keyHintLabel="6" />
        <Key latin:moreKeys="@string/more_keys_for_u" latin:keyLabel="u" latin:keyHintLabel="7" />
        <Key latin:moreKeys="@string/more_keys_for_i" latin:keyLabel="i" latin:keyHintLabel="8" />
        <Key latin:moreKeys="@string/more_keys_for_o" latin:keyLabel="o" latin:keyHintLabel="9" />
        <Key latin:moreKeys="@string/more_keys_for_p" latin:keyLabel="p" latin:keyHintLabel="0" latin:keyWidth="fillRight" />
    </Row>
</merge>
