<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:latin="http://schemas.android.com/apk/res/inputmethod.latin.ported">
    <include latin:keyboardLayout="@xml/kbd_key_styles" />
    <include latin:keyboardLayout="@xml/kbd_qwerty_row1" />
    <Row latin:keyWidth="10.000002%p">
        <Key latin:moreKeys="@string/more_keys_for_a" latin:keyLabel="a" />
        <Key latin:moreKeys="@string/more_keys_for_s" latin:keyLabel="s" />
        <Key latin:moreKeys="@string/more_keys_for_d" latin:keyLabel="d" />
        <Key latin:keyLabel="f" />
        <Key latin:moreKeys="@string/more_keys_for_g" latin:keyLabel="g" />
        <Key latin:keyLabel="h" />
        <Key latin:keyLabel="j" />
        <Key latin:moreKeys="@string/more_keys_for_k" latin:keyLabel="k" />
        <Key latin:moreKeys="@string/more_keys_for_l" latin:keyLabel="l" />
        <Key latin:keyLabel="ñ" />
    </Row>
    <include latin:keyboardLayout="@xml/kbd_qwerty_row3" />
    <include latin:keyboardLayout="@xml/kbd_qwerty_row4" />
</merge>
