<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:latin="http://schemas.android.com/apk/res/inputmethod.latin.ported">
    <Row latin:keyWidth="10.000002%p">
        <Key latin:keyStyle="shiftKeyStyle" latin:visualInsetsRight="0.99999905%p" latin:keyWidth="14.999998%p" />
        <Key latin:moreKeys="@string/more_keys_for_z" latin:keyLabel="z" />
        <Key latin:keyLabel="x" />
        <Key latin:moreKeys="@string/more_keys_for_c" latin:keyLabel="c" />
        <Key latin:moreKeys="@string/more_keys_for_v" latin:keyLabel="v" />
        <Key latin:keyLabel="b" />
        <Key latin:moreKeys="@string/more_keys_for_n" latin:keyLabel="n" />
        <Key latin:keyLabel="m" />
        <Key latin:keyStyle="deleteKeyStyle" latin:visualInsetsLeft="0.99999905%p" latin:keyWidth="fillBoth" />
    </Row>
</merge>
